<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productList.ProductListActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_gray"
            android:clipToPadding="true"
            android:padding="3dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/productList_text1"
                android:textColor="@color/primary_textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
                app:layout_constraintStart_toEndOf="@+id/imageButton8"
                app:layout_constraintTop_toTopOf="@+id/imageButton8" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/image_button_background"
                android:padding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_caret_left_round" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/image_button_background"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton8"
                app:srcCompat="@drawable/ic_three_dots" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:background="@drawable/image_button_background"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton10"
                app:layout_constraintEnd_toStartOf="@+id/imageButton10"
                app:layout_constraintTop_toTopOf="@+id/imageButton10"
                app:srcCompat="@drawable/ic_grid" />

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:background="@drawable/image_button_background"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton12"
                app:layout_constraintEnd_toStartOf="@+id/imageButton12"
                app:layout_constraintTop_toTopOf="@+id/imageButton12"
                app:srcCompat="@drawable/ic_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingVertical="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <Button
            android:id="@+id/button6"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent"
            android:text="@string/productList_btn1"
            android:textColor="@color/primary_black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/productList_btn2"
            android:textColor="@color/primary_textColor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/productList_btn3"
            android:textColor="@color/primary_textColor"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>